fixed major issues

--- a/pages/index.css
+++ b/pages/index.css
@@ -2,3 +2,4 @@
 @import url(../block/header.css);
 @import url(../block/page.css);
 @import url(../block/profile.css);
+@import url(../blocks/content.css);
