--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,8 +1,7 @@
 .footer {
   display: flex;
-  max-width: 104px;
-  height: 14px;
-  padding-left: 668px;
+  margin: 0 auto;
+  justify-content: center;
   font-family: poppins, Arial, Helvetica, sans-serif;
   font-weight: 400;
   font-size: 16px;
