--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -40,24 +40,30 @@
 
 .profile__edit-btn {
   margin-top: auto;
-  width: 84px;
-  height: 16px;
-  font-family: Poppins;
+  font-family: Poppins, Arial, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
-  letter-spacing: 0%;
+  border: none;
+  opacity: 0.7;
+  cursor: pointer;
 }
 
 .profile__add-btn {
   margin-left: auto;
-  width: 73px;
-  height: 16px;
-  font-family: Poppins;
+  margin-top: auto;
+  width: 149px;
+  height: 52px;
+  font-family: Poppins, Arial, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
-  letter-spacing: 0%;
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 627px) {
