--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,7 @@
 .cards {
   padding-top: 20px;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #21212166;
 }
 
 .cards__list {
@@ -15,5 +17,10 @@
 @media screen and (max-width: 627px) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
+    gap: 20px;
+  }
+
+  .cards {
+    padding-bottom: 20px;
   }
 }
