--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,5 +7,9 @@
   font-size: 16px;
   line-height: 1;
   color: #212121;
-  letter-spacing: 0%;
+  padding: 60px 0;
+}
+
+.footer__copyright {
+  margin: 0;
 }
