--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -8,6 +8,7 @@
   margin-right: 20px;
   height: 190px;
   width: 190px;
+  border-radius: 8px;
 }
 
 .profile__column {
@@ -36,6 +37,12 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
+  font-family: poppins, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 18.22px;
+  line-height: 100%;
+  color: #212121;
+  opacity: 0.7;
 }
 
 .profile__edit-btn {
@@ -47,11 +54,24 @@
   border: none;
   opacity: 0.7;
   cursor: pointer;
+  color: #212121;
+  background-color: #fcf5e5;
+  display: flex;
+  align-items: center;
+  gap: 9.11px;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.profile__edit-btn:hover {
+  background-color: #fcf5e5;
+  color: #212121;
+  opacity: 1;
 }
 
 .profile__add-btn {
   margin-left: auto;
   margin-top: auto;
+  padding: 20.5px, 36.44px;
   width: 149px;
   height: 52px;
   font-family: Poppins, Arial, sans-serif;
@@ -59,11 +79,21 @@
   font-size: 16px;
   line-height: 100%;
   display: flex;
-  gap: 8px;
+  gap: 9.11px;
   justify-content: center;
   align-items: center;
   border-radius: 8px;
   cursor: pointer;
+  color: #fcf5e5;
+  background-color: #212121;
+  opacity: 1;
+  transition: background-color 0.3s color 0.3s;
+}
+
+.profile__add-btn:hover {
+  background-color: #212121;
+  color: #fcf5e5;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 627px) {
