--- a/blocks/card.css
+++ b/blocks/card.css
@@ -11,6 +11,11 @@
   white-space: nowrap;
   overflow: hidden;
   max-width: 353px;
+  font-family: Poppins, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  color: #212121;
 }
 
 .card__content {
