--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -39,7 +39,7 @@
   max-width: 420px;
   font-family: poppins, Arial, sans-serif;
   font-weight: 500;
-  font-size: 18.22px;
+  font-size: 16px;
   line-height: 100%;
   color: #212121;
   opacity: 0.7;
@@ -55,23 +55,21 @@
   opacity: 0.7;
   cursor: pointer;
   color: #212121;
-  background-color: #fcf5e5;
+  background-color: transparent;
   display: flex;
   align-items: center;
-  gap: 9.11px;
-  transition: background-color 0.3s, color 0.3s;
+  gap: 8px;
+  transition: background-color 0.3s;
 }
 
 .profile__edit-btn:hover {
-  background-color: #fcf5e5;
-  color: #212121;
   opacity: 1;
 }
 
 .profile__add-btn {
   margin-left: auto;
   margin-top: auto;
-  padding: 20.5px, 36.44px;
+  padding: 0, 0;
   width: 149px;
   height: 52px;
   font-family: Poppins, Arial, sans-serif;
@@ -79,7 +77,7 @@
   font-size: 16px;
   line-height: 100%;
   display: flex;
-  gap: 9.11px;
+  gap: 8px;
   justify-content: center;
   align-items: center;
   border-radius: 8px;
@@ -91,9 +89,7 @@
 }
 
 .profile__add-btn:hover {
-  background-color: #212121;
-  color: #fcf5e5;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 627px) {
@@ -110,13 +106,13 @@
     height: 80px;
     width: 80px;
     margin-bottom: 12px;
-    border-radius: 8px;
   }
 
   .profile__name {
     font-size: 20px;
     margin-bottom: 6px;
     max-width: 288px;
+    color: #212121;
   }
 
   .profile__description {
