--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -27,6 +27,7 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
+  color: #212121;
 }
 
 .profile__description {
@@ -69,7 +70,7 @@
 .profile__add-btn {
   margin-left: auto;
   margin-top: auto;
-  padding: 0, 0;
+  padding: 0;
   width: 149px;
   height: 52px;
   font-family: Poppins, Arial, sans-serif;
@@ -80,12 +81,13 @@
   gap: 8px;
   justify-content: center;
   align-items: center;
+  border: none;
   border-radius: 8px;
   cursor: pointer;
   color: #fcf5e5;
   background-color: #212121;
   opacity: 1;
-  transition: background-color 0.3s color 0.3s;
+  transition: background-color 0.3s;
 }
 
 .profile__add-btn:hover {
@@ -112,7 +114,6 @@
     font-size: 20px;
     margin-bottom: 6px;
     max-width: 288px;
-    color: #212121;
   }
 
   .profile__description {
