--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,10 +10,13 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
+  transition: visibility 0.3s linear, opacity 0.3s linear;
+  opacity: 0;
 }
 
-.modal_is-opened {
+.modal__is-opened {
   visibility: visible;
+  opacity: 1;
 }
 
 .modal-container {
@@ -32,6 +35,11 @@
   height: 40px;
   width: 40px;
   color: #212121;
+  cursor: pointer;
+}
+
+.modal__close-btn:hover {
+  opacity: 0.8;
 }
 
 .modal__title {
@@ -59,4 +67,9 @@
 
 .modal__submit-btn {
   max-width: 156px;
+  cursor: pointer;
+}
+
+.modal__submit-btn:hover {
+  opacity: 0.8;
 }
