--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -14,12 +14,12 @@
   opacity: 0;
 }
 
-.modal__is-opened {
+.modal_is-opened {
   visibility: visible;
   opacity: 1;
 }
 
-.modal-container {
+.modal__container {
   max-width: 730px;
   width: 100%;
   border-radius: 8px;
@@ -36,14 +36,21 @@
   width: 40px;
   color: #212121;
   cursor: pointer;
+  opacity: 0.8;
+  background-color: transparent;
 }
 
 .modal__close-btn:hover {
-  opacity: 0.8;
+  opacity: 1;
 }
 
 .modal__title {
   margin: 0 0 32px;
+  font-family: poppins, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 100%;
+  color: #212121;
 }
 
 .modal__form {
@@ -53,12 +60,24 @@
 
 .modal__label {
   margin: 0 0 32px;
+  height: 18px;
+  width: 49px;
+  font-family: poppins, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  color: #212121;
 }
 
 .modal__input {
   display: block;
   margin: 8px 0 0;
   width: 100%;
+  cursor: pointer;
+}
+
+.modal__input-hover {
+  opacity: 0.8;
 }
 
 .modal__input::placeholder {
@@ -67,7 +86,16 @@
 
 .modal__submit-btn {
   max-width: 156px;
+  border: none;
+  border-radius: 8px;
+  padding: 18px 32px 18px 32px;
   cursor: pointer;
+  font-family: poppins, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  color: #fcf5e5;
+  background-color: #212121;
 }
 
 .modal__submit-btn:hover {
