--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -41,7 +41,7 @@
   opacity: 0.8;
   background-color: transparent;
   border: none;
-  background-image: (url(../images/close.svg));
+  background-image: url(../images/close-icon.svg);
 }
 
 .modal__close-btn:hover {
@@ -65,29 +65,28 @@
 
 .modal__label {
   margin: 0;
-  max-width: 49px;
   font-family: poppins, Arial, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
-  color: #212121, 0.8;
-  gap: 8px;
+  color: rgba (33, 33, 33 0.8);
 }
 
 .modal__input {
   display: block;
   margin: 8px 0 0;
   width: 100%;
-  line-height: 52px;
+  line-height: 1px;
   cursor: pointer;
   border-radius: 8px;
-  border: 1px;
+  border-width: 1px;
   padding: 16px 12px 16px 12px;
-  border-color: 33, 33, 33, 0.4;
+  border-color: rgba (33, 33, 33, 0.4);
+  box-sizing: border-box;
 }
 
 .modal__input:hover {
-  border-color: 33, 33, 33;
+  border-color: rgba (33, 33, 33);
 }
 
 .modal__input::placeholder {
