--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -113,7 +113,27 @@
 
 @media screen and (max-width: 627px) {
   .modal__container {
-    max-width: 300px;
-    line-height: 336px;
+    padding: 12px 8px;
+  }
+
+  .modal__title {
+    font-size: 20px;
+  }
+
+  .modal__close-btn {
+    top: 22px;
+    right: 12px;
+  }
+
+  .modal__form {
+    margin-top: 34px;
+  }
+
+  .modal__input {
+    font-size: 16px;
+  }
+
+  .modal__submit-btn {
+    max-width: none;
   }
 }
