--- a/blocks/card.css
+++ b/blocks/card.css
@@ -37,6 +37,15 @@
   background-repeat: no-repeat;
 }
 
+.card__like-button_active {
+  background-image: url(../images/like.svg);
+  opacity: 1;
+}
+
+.card__like-button_active:hover {
+  opacity: 0.4;
+}
+
 .card__like-button:hover {
   opacity: 100%;
 }
