--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -14,6 +14,10 @@
   opacity: 0;
 }
 
+.modal_type_preview {
+  padding: 0 16px;
+}
+
 .modal_is-opened {
   visibility: visible;
   opacity: 1;
@@ -42,6 +46,11 @@
   background-color: transparent;
   border: none;
   background-image: url(../images/close-icon.svg);
+}
+
+.modal__close-btn_type_preview {
+  top: 0;
+  right: -52.5px;
 }
 
 .modal__close-btn:hover {
@@ -111,6 +120,24 @@
   opacity: 0.8;
 }
 
+.modal__image-container {
+  position: relative;
+}
+
+.modal__image {
+  max-width: 80vw;
+  max-height: 80vh;
+  width: 100%;
+  object-fit: contain;
+  display: block;
+  border-radius: 8px;
+}
+
+.modal__caption {
+color: white;
+}
+
+
 @media screen and (max-width: 627px) {
   .modal__container {
     padding: 12px 8px;
@@ -135,5 +162,16 @@
 
   .modal__submit-btn {
     max-width: none;
+  }
+}
+
+@media screen and (max-width: 627px) {
+  .modal__close-btn_type_preview {
+  top: -48px;
+  right: 0;
+  }
+
+  .modal__image {
+    max-width: unset;
   }
 }
