--- a/blocks/card.css
+++ b/blocks/card.css
@@ -13,6 +13,10 @@
   border-radius: 8px;
 }
 
+.card__image:hover {
+  cursor: pointer;
+  opacity: 0.8;}
+
 .card__title {
   text-overflow: ellipsis;
   white-space: nowrap;
