--- a/blocks/card.css
+++ b/blocks/card.css
@@ -43,6 +43,7 @@
   top: 10px;
   right: 10px;
   border: none;
+  border-radius: 50%;
   background-color: transparent;
   opacity: 30%;
   cursor: pointer;
