--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -75,6 +75,8 @@
 
 .modal__label {
   margin: 0;
+  margin-bottom: 32px;
+  display: block;
   font-family: poppins, Arial, sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -95,12 +97,22 @@
   box-sizing: border-box;
 }
 
+.modal__input_type_error {
+  border: 1px solid rgba(255, 0, 0, 0.6)
+}
+
 .modal__input:hover {
   border-color: rgba (33, 33, 33);
 }
 
 .modal__input::placeholder {
   color: #2121214d;
+}
+
+.modal__error {
+  display: block;
+  color: red;
+  margin-top: 8px;
 }
 
 .modal__submit-btn {
