--- a/blocks/card.css
+++ b/blocks/card.css
@@ -45,7 +45,7 @@
   border: none;
   border-radius: 50%;
   background-color: transparent;
-  opacity: 30%;
+  opacity: 0.3;
   cursor: pointer;
   background-size: contain;
   background-position: center;
