--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,6 +10,7 @@
   justify-content: center;
   align-items: center;
   padding: 10px;
+  gap: 8px;
   transition: visibility 0.3s linear, opacity 0.3s linear;
   opacity: 0;
 }
